Fix drawer date input width overflow

--- a/src/index.css
+++ b/src/index.css
@@ -301,14 +301,50 @@ body::-webkit-scrollbar-thumb:hover {
 
 .job-drawer-panel input,
 .job-drawer-panel textarea,
+.job-drawer-panel select {
+  display: block;
+  width: 100%;
+  inline-size: 100%;
+  min-width: 0;
+  min-inline-size: 0;
+  max-width: 100%;
+  max-inline-size: 100%;
+  box-sizing: border-box;
+}
+
 .job-drawer-panel button,
 .job-drawer-panel [role='button'] {
+  min-width: 0;
   max-width: 100%;
+  box-sizing: border-box;
 }
 
 .job-drawer-panel input[type='date'] {
   min-width: 0;
+  min-inline-size: 0;
   width: 100%;
+  inline-size: 100%;
+  max-width: 100%;
+  max-inline-size: 100%;
+  box-sizing: border-box;
+}
+
+.job-drawer-panel input[type='date']::-webkit-datetime-edit,
+.job-drawer-panel input[type='date']::-webkit-datetime-edit-fields-wrapper,
+.job-drawer-panel input[type='date']::-webkit-datetime-edit-text,
+.job-drawer-panel input[type='date']::-webkit-datetime-edit-month-field,
+.job-drawer-panel input[type='date']::-webkit-datetime-edit-day-field,
+.job-drawer-panel input[type='date']::-webkit-datetime-edit-year-field,
+.job-drawer-panel input[type='date']::-webkit-date-and-time-value {
+  min-width: 0;
+  min-inline-size: 0;
+  max-width: 100%;
+  max-inline-size: 100%;
+  text-align: left;
+}
+
+.job-drawer-panel input[type='date']::-webkit-calendar-picker-indicator {
+  flex-shrink: 0;
 }
 
 :root[data-theme='light'] button:disabled,
